[gd_scene load_steps=9 format=2]

[ext_resource path="res://new_theme_mm.tres" type="Theme" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://sfx/ui_choose.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/shat_progress_0_l.png" type="Texture" id=4]
[ext_resource path="res://sprites/shat_progress_3.png" type="Texture" id=5]
[ext_resource path="res://sprites/shat_progress_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/shat_progress_2.png" type="Texture" id=7]
[ext_resource path="res://sprites/shat_progress_4.png" type="Texture" id=8]

[node name="PauseMenu_Canvas" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 2 )

[node name="PauseMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Continue_Button" type="Button" parent="PauseMenu/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -107.0
margin_right = 169.0
margin_bottom = -42.0
focus_neighbour_bottom = NodePath("../Exit_Button")
text = "Continue"

[node name="Exit_Button" type="Button" parent="PauseMenu/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = 45.0
margin_right = 83.0
margin_bottom = 110.0
focus_neighbour_top = NodePath("../Continue_Button")
text = "Exit"

[node name="Shattered1" type="TextureRect" parent="PauseMenu/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 94.0
margin_right = -80.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 5

[node name="SImg1" type="TextureRect" parent="PauseMenu/Background/Shattered1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 5

[node name="Shattered2" type="TextureRect" parent="PauseMenu/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = 94.0
margin_right = 48.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 5

[node name="SImg2" type="TextureRect" parent="PauseMenu/Background/Shattered2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 5

[node name="ExtraDone" type="TextureRect" parent="PauseMenu/Background"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = 538.0
margin_right = 48.0
margin_bottom = 634.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 5

[node name="EImg" type="TextureRect" parent="PauseMenu/Background/ExtraDone"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
stretch_mode = 5

[node name="Shattered3" type="TextureRect" parent="PauseMenu/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 80.0
margin_top = 94.0
margin_right = 176.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 5

[node name="SImg3" type="TextureRect" parent="PauseMenu/Background/Shattered3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 5

[node name="AudioGUI" type="AudioStreamPlayer" parent="PauseMenu"]
stream = ExtResource( 3 )

[connection signal="focus_entered" from="PauseMenu/Background/Continue_Button" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="PauseMenu/Background/Continue_Button" to="." method="_on_Continue_Button_pressed"]
[connection signal="focus_entered" from="PauseMenu/Background/Exit_Button" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="PauseMenu/Background/Exit_Button" to="." method="_on_Exit_Button_pressed"]
